--- a/src/widgets/chipsWidget/ui/ChipsWidget.module.less
+++ b/src/widgets/chipsWidget/ui/ChipsWidget.module.less
@@ -1,6 +1,7 @@
 .container {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-wrap: nowrap;
     gap: 0.5rem;
     position: relative;
