--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -1,4 +1,12 @@
 * {
-  box-sizing: border-box;
-  margin: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.app {
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    place-items: center;
 }
