--- a/src/shared/ui/Popup/Popup.module.less
+++ b/src/shared/ui/Popup/Popup.module.less
@@ -1,8 +1,7 @@
 .popup {
     position: absolute;
-    top: 100%;
-    right: 0;
-    margin-top: 0.25rem;
+    min-width: 260px;
+    width: 280px;
     padding: 1rem;
     background: #fff;
     border-radius: 0.5rem;
