--- a/src/shared/ui/Button/Button.module.less
+++ b/src/shared/ui/Button/Button.module.less
@@ -1,7 +1,7 @@
 .button {
     display: flex;
-    padding: 8px 12px;
-    border-radius: 16px;
+    padding: 0.5rem 0.75rem;
+    border-radius: 1rem;
     border: none;
     background-color: #eee;
     cursor: pointer;
